--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+body {
+  background-color: #050708;
+  /* cursor: url('cursor.png'), auto;	 */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav-link {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.scroll-down {
+  position: absolute;
+  bottom: 0;
+  cursor: pointer;
+}
+.about-us {
+  background-color: #121415;
+}
+.select-form {
+  background: transparent;
+  color: white;
+  border: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.purple-card {
+  background-color: #5B2E91;
+}
+#custom-input {
+  background: transparent;
+  border: 0;
+  color: white;
+}
+#custom-input:focus {
+  border: 0;
 }
